[gd_scene load_steps=22 format=2]

[ext_resource path="res://Player.gd" type="Script" id=1]
[ext_resource path="res://imagens projeto corona/personagem4.png" type="Texture2D" id=2]
[ext_resource path="res://imagens projeto corona/pagoneza certa png.png" type="Texture2D" id=3]
[ext_resource path="res://imagens projeto corona/life.png" type="Texture2D" id=4]
[ext_resource path="res://star-trek.ttf" type="FontFile" id=5]
[ext_resource path="res://coin.wav" type="AudioStream" id=6]
[ext_resource path="res://pause.p_script.gd" type="Script" id=7]
[ext_resource path="res://Nova pasta/musica jogo 1.wav" type="AudioStream" id=8]
[ext_resource path="res://Nova pasta/disparo laser.wav" type="AudioStream" id=9]

[sub_resource type="Animation" id=1]
length = 1.05
step = 0.03
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.03, 0.06, 0.09, 0.12, 0.15, 0.18, 0.21, 0.24, 0.27, 0.3, 0.33, 0.36, 0.39, 0.42, 0.45, 0.48, 0.51, 0.54, 0.57, 0.6, 0.63, 0.66, 0.69, 0.72, 0.75, 0.78, 0.81, 0.84, 0.87, 0.9, 0.93, 0.96, 0.99, 1.02 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 1, 4, 158, 212 ), Rect2( 166, 4, 158, 212 ), Rect2( 344, 5, 147, 216 ), Rect2( 509, 5, 147, 216 ), Rect2( 685, 7, 116, 217 ), Rect2( 850, 7, 116, 217 ), Rect2( 1025, 7, 105, 217 ), Rect2( 1190, 7, 105, 217 ), Rect2( 1363, 1, 98, 224 ), Rect2( 1528, 1, 98, 224 ), Rect2( 1666, 1, 143, 223 ), Rect2( 1831, 1, 143, 223 ), Rect2( 11, 293, 152, 224 ), Rect2( 176, 293, 152, 224 ), Rect2( 343, 297, 148, 208 ), Rect2( 508, 297, 148, 208 ), Rect2( 680, 297, 140, 209 ), Rect2( 845, 297, 140, 209 ), Rect2( 1027, 298, 117, 219 ), Rect2( 1192, 298, 117, 219 ), Rect2( 1367, 297, 96, 221 ), Rect2( 1532, 297, 96, 221 ), Rect2( 1683, 293, 108, 224 ), Rect2( 1848, 293, 108, 224 ), Rect2( 10, 588, 144, 221 ), Rect2( 175, 588, 144, 221 ), Rect2( 343, 589, 148, 208 ), Rect2( 508, 589, 148, 208 ), Rect2( 680, 589, 140, 209 ), Rect2( 845, 589, 140, 209 ), Rect2( 1007, 580, 140, 234 ), Rect2( 1358, 578, 110, 234 ), Rect2( 1537, 584, 91, 222 ), Rect2( 1681, 574, 120, 231 ), Rect2( 1846, 574, 120, 231 ) ]
}

[sub_resource type="Animation" id=2]
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0.1 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Rect2( 52, 1466, 88, 216 ) ]
}

[sub_resource type="Animation" id=3]
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.02, 0.05, 0.08, 0.11, 0.15, 0.2, 0.25, 0.3, 0.35, 0.4, 0.45, 0.5, 0.55, 0.6, 0.64, 0.68, 0.72, 0.76, 0.8, 0.84, 0.88, 0.92, 0.96, 1 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 18, 841, 138, 217 ), Rect2( 183, 841, 138, 217 ), Rect2( 339, 829, 146, 199 ), Rect2( 504, 829, 146, 199 ), Rect2( 664, 818, 150, 190 ), Rect2( 829, 818, 150, 190 ), Rect2( 992, 805, 154, 213 ), Rect2( 1153, 802, 160, 216 ), Rect2( 1335, 815, 141, 203 ), Rect2( 1500, 815, 141, 203 ), Rect2( 1679, 817, 121, 222 ), Rect2( 1844, 817, 121, 222 ), Rect2( 17, 1112, 123, 220 ), Rect2( 182, 1112, 123, 220 ), Rect2( 347, 1124, 129, 221 ), Rect2( 512, 1124, 129, 221 ), Rect2( 670, 1142, 137, 227 ), Rect2( 835, 1142, 137, 227 ), Rect2( 1011, 1173, 119, 217 ), Rect2( 1176, 1173, 119, 217 ), Rect2( 1365, 1186, 95, 204 ), Rect2( 1530, 1186, 95, 204 ), Rect2( 1702, 1181, 88, 209 ), Rect2( 1867, 1181, 88, 209 ), Rect2( 52, 1466, 88, 216 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "andando"
length = 0.45
loop = true
step = 0.07
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.07, 0.14, 0.21, 0.28, 0.35, 0.42 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 9, 26, 73, 97 ), Rect2( 89, 30, 53, 94 ), Rect2( 143, 20, 77, 90 ), Rect2( 228, 24, 70, 97 ), Rect2( 307, 27, 47, 94 ), Rect2( 355, 18, 65, 98 ), Rect2( 420, 25, 71, 99 ) ]
}

[sub_resource type="Animation" id=5]
resource_name = "parado"
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0 ),
"transitions": PackedFloat32Array( 1 ),
"update": 0,
"values": [ Rect2( 55, 227, 45, 99 ) ]
}

[sub_resource type="Animation" id=6]
length = 0.25
step = 0.05
tracks/0/type = "value"
tracks/0/path = NodePath(".:region_rect")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PackedFloat32Array( 0, 0.05, 0.1, 0.15, 0.2, 0.25 ),
"transitions": PackedFloat32Array( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Rect2( 55, 227, 45, 99 ), Rect2( 113, 236, 63, 95 ), Rect2( 174, 136, 68, 127 ), Rect2( 248, 184, 58, 110 ), Rect2( 302, 234, 61, 97 ), Rect2( 380, 226, 52, 103 ) ]
}

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 17.3789, 30.5473 )

[sub_resource type="RectangleShape2D" id=8]
extents = Vector2( 17.0253, 2.52246 )

[sub_resource type="CapsuleShape2D" id=9]
radius = 19.2625
height = 21.4583

[sub_resource type="FontFile" id=10]
size = 32
outline_color = Color( 0.729412, 0.0862745, 0.0862745, 1 )
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=11]
size = 19
font_data = ExtResource( 5 )

[sub_resource type="FontFile" id=12]
size = 40
outline_color = Color( 0.807843, 0.0941176, 0.0941176, 1 )
font_data = ExtResource( 5 )

[node name="Node2D" type="Node2D"]
position = Vector2( 522.822, 168.426 )

[node name="Player" type="CharacterBody2D" parent="." groups=[
"player",
]]
position = Vector2( 7.85455, 116.068 )
script = ExtResource( 1 )

[node name="player1" type="Sprite2D" parent="Player"]
position = Vector2( 0.89682, -0.0351868 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )
region_enabled = true
region_rect = Rect2( 52, 1466, 88, 216 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/player1"]
anims/andando = SubResource( 1 )
anims/parado = SubResource( 2 )
anims/pulo = SubResource( 3 )

[node name="player2" type="Sprite2D" parent="Player"]
visible = false
position = Vector2( 0, 1.48856 )
scale = Vector2( 1, 0.718215 )
texture = ExtResource( 3 )
region_enabled = true
region_rect = Rect2( 380, 226, 52, 103 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player/player2"]
autoplay = "pulo"
anims/andando = SubResource( 4 )
anims/parado = SubResource( 5 )
anims/pulo = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2( 0.261214, -0.165756 )
shape = SubResource( 7 )

[node name="pes" type="Area2D" parent="Player"]
visible = false
collision_layer = 4
collision_mask = 4

[node name="shape" type="CollisionShape2D" parent="Player/pes"]
position = Vector2( -0.685909, 33.2552 )
shape = SubResource( 8 )

[node name="dano" type="Area2D" parent="Player"]
visible = false
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player/dano"]
visible = false
position = Vector2( 0.154755, 3.40356 )
shape = SubResource( 9 )

[node name="Marker2D" type="Marker2D" parent="Player"]
position = Vector2( 29.6501, -8.78801 )

[node name="Position2D2" type="Marker2D" parent="Player"]
position = Vector2( -34.9708, -8.47939 )

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2( 0.126223, 8.42105 )
scale = Vector2( 0.5, 0.5 )
current = true
zoom = Vector2( 0.7, 0.9 )
limit_top = -250
limit_bottom = 650
drag_horizontal_enabled = true
drag_vertical_enabled = true
position_smoothing_enabled = true
position_smoothing_speed = 100.0
drag_left_margin = 0.09
drag_top_margin = 0.55
drag_right_margin = 0.07
drag_bottom_margin = 0.11
editor_draw_limits = true
editor_draw_drag_margin = true

[node name="CanvasLayer" type="CanvasLayer" parent="Player"]

[node name="vida1" type="Sprite2D" parent="Player/CanvasLayer"]
position = Vector2( 117.244, 27.6278 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="vida2" type="Sprite2D" parent="Player/CanvasLayer"]
position = Vector2( 72.2924, 27.5883 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="vida3" type="Sprite2D" parent="Player/CanvasLayer"]
light_mask = 1024
position = Vector2( 27.8681, 27.3549 )
scale = Vector2( 0.16, 0.16 )
texture = ExtResource( 4 )

[node name="Label" type="Label" parent="Player/CanvasLayer"]
offset_left = 960.095
offset_top = 25.1117
offset_right = 1000.09
offset_bottom = 71.1117
theme_override_fonts/font = SubResource( 10 )
theme_override_colors/font_color = Color( 0.984314, 0.0392157, 0.0392157, 1 )
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="Player/CanvasLayer"]
offset_left = 935.0
offset_top = 1.0
offset_right = 1021.0
offset_bottom = 21.0
theme_override_fonts/font = SubResource( 11 )
theme_override_colors/font_color = Color( 0.701961, 0.0196078, 0.0196078, 1 )
text = "PONTOS"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="sons" type="Node2D" parent="Player"]

[node name="moeda" type="AudioStreamPlayer2D" parent="Player/sons"]
stream = ExtResource( 6 )

[node name="pulo" type="AudioStreamPlayer" parent="Player/sons"]

[node name="music" type="AudioStreamPlayer" parent="Player/sons"]
stream = ExtResource( 8 )
volume_db = -13.937

[node name="disparo" type="AudioStreamPlayer" parent="Player/sons"]
stream = ExtResource( 9 )

[node name="pause" type="Node2D" parent="Player"]
process_mode = 3
script = ExtResource( 7 )

[node name="Label" type="Label" parent="Player/pause"]
anchor_left = 0.5
anchor_right = 0.5
offset_left = -59.064
offset_top = -156.177
offset_right = 57.936
offset_bottom = -106.177
theme_override_fonts/font = SubResource( 12 )
theme_override_colors/font_color = Color( 0.917647, 0, 0, 1 )
text = "PAUSE"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="body_entered" from="Player/pes" to="Player" method="_on_pes_body_entered"]
[connection signal="body_entered" from="Player/dano" to="Player" method="_on_dano_body_entered"]
